# notebook

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pspm-lock.json  pspm.json
.claude/commands/: commit-and-pr.md  commit.md  start-new-branch.md  sync-from-upstream.md
.claude/skills/: create-anyt-notebook  ebook  gemini-image  gemini-video  pspm-skill-creator  rednote  remove-background  upscale-image  youtube-downloader
.github/workflows/: validate-skills.yml
docs/: FILE_FORMAT.md  PRODUCT.md  USER_GUIDE.md  anyt-notebook-spec.md  pspm-cli-guide.md  skill-development-guide.md  spec-v2.0.md
examples/: form-demo.anyt  form-demo.anyt.md  hello-world.anyt  hello-world.anyt.md  product-video.anyt.md  web-scraper.anyt  web-scraper.anyt.md
notebooks/: .gitignore  gemini-image-playground.anyt.md  image-background-remover.anyt.md  interview-simulation.anyt  linkedin-reach.anyt.md  page-to-rednote.anyt  page-to-rednote.anyt.md  stock-analysis.anyt.md  story-to-video-keling-v2.anyt  story-to-video-keling.anyt  story-to-video.anyt.md  tiktok-motion-transfer-wavespeed.anyt  tiktok-motion-transfer.anyt  youtube-podcast-to-ebook.anyt.md  youtube-video-summarizer-fast.anyt  youtube-video-summarizer-fast.anyt.md  youtube-video-summarizer.anyt  youtube-video-summarizer.anyt.md
notebooks/stock-analysis/: stocks.csv  visualize.py
skills/avatar-renderer/: SKILL.md  pspm.json
skills/avatar-renderer/runtime/: animation_renderer.py  config.py  expression_map.py  face_renderer.py  models.py  pyproject.toml  render.py
skills/create-anyt-notebook/: .pspmignore  SKILL.md  pspm.json
skills/create-anyt-notebook/references/: anyt-notebook-spec.md  product.md
skills/document-intake/: SKILL.md  pspm.json
skills/document-intake/runtime/: config.py  document_parser.py  intake.py  pyproject.toml  question_generator.py
skills/document-intake/runtime/tests/: test_document_parser.py  test_question_generator.py
skills/ebook/: pspm.json
skills/ebook/runtime/: convert_ebook.py  pyproject.toml
skills/eigenai-audio/: SKILL.md  pspm.json
skills/eigenai-audio/runtime/: api.py  config.py  generate_audio.py  pyproject.toml
skills/eigenai-audio/runtime/tests/: test_api.py  test_config.py
skills/emotion-engine/: .pspmignore  SKILL.md  pspm.json
skills/emotion-engine/runtime/: analyze_emotion.py  animation.py  config.py  emotion_mapper.py  models.py  pyproject.toml  sentiment.py
skills/gemini-image/: .gitignore  SKILL.md  pspm.json
skills/gemini-image/runtime/: api.py  config.py  generate_image.py  pyproject.toml
skills/gemini-image/runtime/tests/: test_api.py  test_config.py  test_generate_image.py
skills/gemini-video/: SKILL.md  pspm.json
skills/gemini-video/runtime/: api.py  concat_videos.py  config.py  generate_video.py  media.py  pyproject.toml
skills/gemini-video/runtime/tests/: test_api.py  test_concat_videos.py  test_config.py  test_generate_video.py  test_media.py
skills/interview-simulator/: SKILL.md  pspm.json
skills/interview-simulator/runtime/: analyzer.py  config.py  flow_engine.py  models.py  pyproject.toml  scoring.py  simulate.py
skills/keling-motion/: .pspmignore  SKILL.md  pspm.json
skills/keling-motion/runtime/: api.py  config.py  generate_video.py  media.py  pyproject.toml
skills/keling-motion/runtime/tests/: helpers.py  test_api.py  test_config.py  test_media.py
skills/keling-video/: SKILL.md  pspm.json
skills/keling-video/runtime/: api.py  config.py  generate_video.py  media.py  pyproject.toml
skills/keling-video/runtime/tests/: helpers.py  test_api.py  test_config.py  test_generate_video.py  test_media.py
skills/pspm-skill-creator/: .gitignore  NOTICE  SKILL.md  pspm.json
skills/pspm-skill-creator/agents/: analyzer.md  comparator.md  grader.md
skills/pspm-skill-creator/references/: output-patterns.md  schemas.md
skills/pspm-skill-creator/runtime/: aggregate_benchmark.py  config.py  generate_review.py  init_skill.py  package_skill.py  pyproject.toml  templates.py  validate_all_skills.py  validate_skill.py
skills/pspm-skill-creator/runtime/tests/: test_config.py  test_init_skill.py  test_package_skill.py  test_validate_all_skills.py  test_validate_skill.py
skills/rednote/: .gitignore  .pspmignore  SKILL.md  pspm.json
skills/rednote/runtime/: biome.json  index.html  package.json  pnpm-lock.yaml
skills/remove-background/: SKILL.md  pspm.json
skills/remove-background/runtime/: pyproject.toml  remove_bg.py
skills/remove-background/runtime/tests/: test_remove_bg.py
skills/response-evaluator/: SKILL.md  pspm.json
skills/response-evaluator/runtime/: config.py  evaluate.py  evaluator.py  hallucination_detector.py  models.py  ordinal_mapper.py  pyproject.toml  (+1 more)
skills/run-anyt-notebook/: .pspmignore  SKILL.md  pspm.json
skills/run-anyt-notebook-openclaw/: SKILL.md  pspm.json
skills/run-anyt-notebook/runtime/: config.py  manage_state.py  parse_notebook.py  pyproject.toml  update_notebook.py
skills/run-anyt-notebook/runtime/tests/: test_manage_state.py  test_parse_notebook.py
skills/telegram-media-skill/: SKILL.md  pspm.json
skills/telegram-media-skill/runtime/: config.py  media_line.py  pyproject.toml
skills/telegram-media-skill/runtime/tests/: test_config.py  test_media_line.py
skills/tiktok-downloader/: SKILL.md  pspm.json
skills/upscale-image/: SKILL.md  pspm.json
skills/upscale-image/runtime/: pyproject.toml  upscale.py
skills/upscale-image/runtime/tests/: test_upscale.py
skills/user-profiler/: SKILL.md  pspm.json
skills/user-profiler/runtime/: config.py  models.py  profile.py  profile_manager.py  pyproject.toml  recommender.py  trend_analyzer.py
skills/user-profiler/runtime/tests/: test_profile_manager.py  test_recommender.py  test_trend_analyzer.py
skills/wavespeed-keling-motion/: .gitignore  SKILL.md  pspm.json
skills/wavespeed-keling-motion/runtime/: api.py  config.py  generate_motion.py  media.py  pyproject.toml
skills/wavespeed-keling-motion/runtime/tests/: __init__.py  helpers.py  test_api.py  test_config.py  test_media.py
skills/youtube-downloader/: .gitignore  CHANGELOG.md
(+55 files in other folders)
