[project]
name = "remove-background"
version = "0.1.0"
description = "Remove background from images using rembg"
requires-python = ">=3.11"
dependencies = [
    "rembg[cpu]>=2.0.60",
    "pillow>=10.0.0",
    "pymatting>=1.1.15",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
include = ["."]
typeCheckingMode = "standard"
