[project]
name = "run-anyt-notebook"
version = "0.1.0"
description = "Runtime scripts for running AnyT Notebook files"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.10"
include = ["."]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
